--- a/password_chekcer/index.html
+++ b/password_chekcer/index.html
@@ -4,8 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Js Password checker</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <div class="main-box">
+    <div>
+      <h1>Password Strength Checker</h1>
+    </div>
+    <div>
+      <label for="pass-box">Password</label>
+      <input type="password" placeholder="Enter your Password">
+      <label for="">Strength of Password</label>
+      <div class="power-container">
+        <div id="power-point"></div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
