--- a/js_faq/index.html
+++ b/js_faq/index.html
@@ -66,20 +66,24 @@
     </section>
 
     <script>
+     
       let acc = document.getElementsByClassName("accordion");
 
-      for (let i = 0; i < acc.length; i++) {
-        acc[i].addEventListener("click", function() {
-          this.classList.toggle("active");
+      for(let i = 0; i < acc.length; i++){
+        acc[i].addEventListener("click", function(){
+          //  why can't we use arrow function here instead of regular function 
+          this.classList.toggle("active")
 
           let panel = this.nextElementSibling;
-          if (panel.style.display === "block") {
+          if(panel.style.display === "block"){
             panel.style.display = "none";
-          } else {
-            panel.style.display = "block";
+          }else {
+            panel.style.display = "block"
           }
-        });
+        })
       }
+
+
     </script>
   </body>
 </html>
