--- a/js_modal/index.html
+++ b/js_modal/index.html
@@ -87,18 +87,15 @@
 
   <!-- Javascript -->
   <script>
-    const modal = document.querySelector(".modal");
-    const modalBtn = document.querySelector("#modal-btn");
-    const closeModal = document.querySelector(".btn-close");
-
-    modalBtn.addEventListener("click", () => {
-      modalBtn.classList.toggle("visible")
-      modal.classList.toggle("visible");
-    })
-    closeModal.addEventListener("click", ()=> {
-      closeModal.classList.remove("visible");
-      modal.classList.remove("visible");
-    })
+   let modal = document.querySelector(".modal");
+   let modalBtn = document.getElementById("modal-btn");
+   let modalClose = document.querySelector(".btn-close");
+   modalBtn.addEventListener("click", ()=> {
+    modal.style.display = "block"
+   })
+   modalClose.addEventListener("click", ()=> {
+    modal.style.display = "none";
+   })
 
   </script>
 </body>
